<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_study" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_baseline_emoji_flags_24"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_checkupdate"
            android:icon="@drawable/ic_baseline_update_24"
            android:title="@string/menu_checkupdate" />

    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_baseline_rate_review_24"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_other"
                android:icon="@drawable/ic_baseline_done_all_24"
                android:title="@string/menu_other" />

        </menu>
    </item>
</menu>